--- a/src/main/resources/ui/css/editor.css
+++ b/src/main/resources/ui/css/editor.css
@@ -2,3 +2,15 @@ body
 {
     background: #000000;
 }
+
+main
+{
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div
+{
+    color: #aaaaaa;
+}
